--- a/DenysWhite/WhiteLibrary/ReadMe
+++ b/DenysWhite/WhiteLibrary/ReadMe
@@ -1,1 +1,5 @@
-by Denys White
+#White Library
+## by Denys White
+
+In the start application generate 10 book, and for each book doing history of renting with 
+random data(just for testing, in the future it will take current data function for this is already written).
